--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ДЗ 16. ДЗ 7.1. Замикання
-    </title>
+    <title>ДЗ 16. ДЗ 7.1. Замикання</title>
 </head>
 <body>
     <h1>Hello, Maria =)</h1>
+    <script src="js/index.js"></script>
 </body>
 </html>
